# Senior_Python_Developer

./: .click_example.py.swo  .click_example.py.swp  .gitignore  .implementation.cpp.swp  README.md  aiocron.py  amhdal_law.py  annotation_types.py  arroe_example.py  assert.py  asyncio_event.py  birth_date.py  bisect_insort.py  brute_force.py  bubble_sort.py  cached_property.py  calculate_discount.py  classmethod.py  click_example.py  count_symbols.py  counter_class.py  counting_sort.py  current_thread.py  cvxpy_example.py  cycles_with_collections.py  datetime.py  decoration_fabrik.py  destructor.py  dict_get.py  dict_update.py  dont_repeat_yourself  dont_repeat_yourself.cpp  duck_typing.py  exception_chaining.py  factorial.py  feather.py  fibonacci.py  frozenset.py  functools_reduce.py  functools_wraps.py  (+54 more)
algorithm_leetcode/: cache_decorator.py  dungeon_game.py  factorial_trailing_zeroes.py  implement_trie.py  intersection_of_two_linked_lists.py  isomorphic_strings.py  largest_number.py  maximum_gap.py  meeting_rooms.py  min_stack.py  one_edit_distance.py  remove_linked_list_elements.py  reverse_words_in_a_string.py  two_sum.py  typer_example.py
apps/: urls.py
apps/notifications/: models.py
implementation/: main.cpp  person.cpp  person.h
pytest/: test_exceptiongroup.py  test_sample.py
service/: settings.py  settings_db.py  urls.py
soket/: my_data.txt  serial_number.txt  socket_client.py  socket_client2.py  socket_client3.py  socket_client4.py  socket_server.py  socket_server2.py  socket_server3.py
