[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = "Тестовое задание для кандидатов-разработчиков в ООО Фабрика Решений, на должность Python-разработчик (Django, DRF)."
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"
packages = [{include = "notification_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
pytest = "^7.3.1"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
